Update: spacing fixes

--- a/src/legends/modules/Home/components/CharacterSection/CharacterSection.module.scss
+++ b/src/legends/modules/Home/components/CharacterSection/CharacterSection.module.scss
@@ -18,6 +18,7 @@
   padding: 2.75rem 2.5rem 1.25rem 2.375rem;
   margin: 0 auto;
   margin-bottom: 8.5rem;
+  margin-top: 3.375rem;
 
   .logoAndBalanceWrapper {
     display: inline-block;
